--- a/package.json
+++ b/package.json
@@ -12,12 +12,12 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "isomorphic-fetch": "^2.2.1",
-    "material-design-lite": "^1.1.3",
     "react": "^15.3.0",
     "react-dom": "^15.3.0",
     "react-immutable-proptypes": "^2.1.0",
     "react-redux": "^4.4.5",
     "react-router": "^2.6.1",
+    "react-tap-event-plugin": "^1.0.0",
     "redux": "^3.5.2",
     "redux-logger": "^2.6.1",
     "redux-thunk": "^2.1.0"
@@ -28,10 +28,18 @@
     "babel-preset-es2015": "^6.13.1",
     "babel-preset-react": "^6.11.1",
     "css-loader": "^0.23.1",
+    "eslint": "^3.3.0",
+    "eslint-config-standard": "^5.3.5",
+    "eslint-config-standard-react": "^3.0.0",
+    "eslint-loader": "^1.5.0",
+    "eslint-plugin-promise": "^2.0.1",
+    "eslint-plugin-react": "^6.0.0",
+    "eslint-plugin-standard": "^2.0.0",
     "extract-text-webpack-plugin": "^1.0.1",
     "html-webpack-plugin": "^2.22.0",
     "node-sass": "^3.8.0",
     "sass-loader": "^4.0.0",
+    "sasslint-loader": "0.0.1",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
     "webpack-dev-middleware": "^1.6.1",
